# dexcost-sdk

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PARITY-AUDIT.md  README.md  SECURITY.md  SUPPORT.md  release-please-config.json
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: validate-pr-title.mjs  validate-pr-title.test.mjs
.github/workflows/: ci.yml  pr-title.yml  release-please.yml  release-python.yml  (+1 more)
fixtures/: README.md  service_usage_observation_conformance.json  service_usage_observers.json
go/: CHANGELOG.md  PARITY.md  README.md  compute_init_test.go  config.go  config_test.go  cross_sdk_parity_test.go  dev_console.go  dexcost.go  dexcost_test.go  endpoint_allowlist_test.go  go.mod  go.sum  no_init_no_panic_test.go  options.go  options_interop_test.go  parity_test.go  session.go  session_race_test.go  session_test.go  set_api_key_test.go
python/: CHANGELOG.md  Makefile  README.md  TS_PARITY_AUDIT.md  pyproject.toml
python/examples/: agent_cost.py  customer_attribution.py  quickstart.py  waste_detection.py
python/examples/quickstart/: __main__.py
python/fixtures/: batch_payload.v1.json  event_external_cost.v1.json  event_late.v1.json  event_llm_call.v1.json  ingest_request.v1.json  ingest_response.v1.json  task.v1.json
python/schemas/: README.md  dexcost-task.v1.json
python/src/dexcost/: __init__.py  auto_task.py  cgroup_reader.py  cgroup_walker.py  cli.py  clients.py  cloud_detect.py  compute_accountant.py  compute_pricing.py  compute_runtime.py  compute_wrap.py  config.py  context.py  debug.py  dev_console.py  doctor.py  egress_pricing.py  fargate_metadata.py  gpu_accountant.py  gpu_pricing.py  gpu_runtime.py  gpu_wrap.py  heuristics.py  network_accountant.py  nvml_reader.py  pricing.py  rates.py  redaction.py  scanner.py  schema.py  service_catalog.py  service_usage_observers.py  session.py  sync.py  tracker.py
python/src/dexcost/adapters/: __init__.py  _netbytes.py  aws_lambda.py  browser.py  http.py
python/src/dexcost/adapters/data/: aws_lambda_pricing.json
python/src/dexcost/attribution/: __init__.py  convert.py  types.py  validate.py
python/src/dexcost/data/: egress_prices.json  service_usage_observers.json
python/src/dexcost/instruments/: __init__.py  anthropic.py  bedrock.py  cohere.py  gemini.py  litellm.py  mcp.py  openai.py
python/src/dexcost/integrations/: __init__.py  langchain.py  traces.py
python/src/dexcost/models/: __init__.py  _serde.py  enums.py  event.py  task.py
python/src/dexcost/storage/: __init__.py  migrations.py  protocol.py  sqlite.py
python/tests/: conftest.py  test_anthropic_instrument.py  test_attribution_v2_conformance.py  test_auto_instrument.py  test_auto_task.py  test_batch_splitting.py  test_bedrock_instrument.py  test_browser_adapter.py  test_cgroup_reader.py  test_cgroup_walker.py  test_cli.py  test_clients.py  test_cloud_detect.py  test_cloud_detect_instance_type.py  test_cohere_instrument.py  test_compat_smoke.py  test_compute_accountant.py  test_compute_auto_emission_long_running.py  test_compute_catalog_integrity.py  test_compute_cross_runtime_matrix.py  test_compute_idle_gap.py  test_compute_invariants.py  test_compute_math_fixes.py  test_compute_pricing.py  test_compute_runtime.py  test_compute_wrap.py  test_config.py  test_context.py  test_cross_sdk_parity.py  test_debug_mode.py  test_doctor.py  test_e2e_local.py  test_egress_catalog_integrity.py  test_egress_pricing.py  test_endpoint_allowlist.py  test_enums_network.py  test_error_handling.py  test_examples.py  test_fargate_metadata.py  test_gemini_instrument.py  (+67 more)
rust/: CHANGELOG.md  Cargo.toml  PARITY.md  README.md
rust/examples/agent_cost/: main.rs
rust/examples/quickstart/: main.rs
rust/src/: cloud_detect.rs  config.rs  dev_console.rs  error.rs  lib.rs  scanner.rs
rust/src/adapters/: compute_wrap.rs  gpu_wrap.rs  http.rs  lambda.rs  mod.rs  netbytes.rs  network_accountant.rs  reqwest_middleware.rs
rust/src/attribution/: convert.rs  mod.rs  types.rs  validate.rs
rust/src/clients/: mod.rs  streaming.rs  tracked_anthropic.rs  tracked_gemini.rs  tracked_openai.rs  wrappers.rs
rust/src/core/: auto_task.rs  cgroup_reader.rs  cgroup_walker.rs  compute_accountant.rs  compute_runtime.rs  context.rs  fargate_metadata.rs  gpu_accountant.rs  gpu_runtime.rs  heuristics.rs  mod.rs  models.rs  nvml_reader.rs  session.rs  tracker.rs
rust/src/data/: compute_prices.json  gpu_prices.json  service_usage_observers.json
rust/src/integrations/: langchain.rs  mod.rs  traces.rs
rust/src/middleware/: actix.rs  axum.rs  mod.rs  tower.rs
rust/src/pricing/: compute_pricing.rs  cost_map.json  egress_pricing.rs  engine.rs  gpu_pricing.rs  mod.rs  rates.rs  service_catalog.rs  service_usage_observers.rs
rust/src/schema/: dexcost-event.v1.json  dexcost-task.v1.json  mod.rs  validate.rs
rust/src/security/: redaction.rs
rust/src/transport/: buffer.rs  mod.rs  pusher.rs
rust/tests/: async_no_panic_test.rs  attribution_v2_conformance.rs  buffer_test.rs  compute_catalog_drift_test.rs  compute_finalize_test.rs  compute_invariants_test.rs  cross_sdk_parity.rs  e2e_test.rs  gpu_auto_emission_and_back_fill_test.rs  gpu_catalog_integrity_test.rs  gpu_catalog_sync_consistency_test.rs  gpu_cross_billing_model_matrix_test.rs  gpu_idle_gap_test.rs  gpu_invariants_test.rs  gpu_utilization_signal_observability_test.rs  init_lifecycle_test.rs  integration_test.rs  models_test.rs  pricing_test.rs  pusher_partial_success_test.rs  pusher_split_test.rs  pusher_tasks_test.rs  service_catalog_sync_consistency_test.rs  service_usage_observer_conformance.rs  set_api_key_test.rs  start_task_parent_test.rs  test_network_cost_finalize.rs  total_cost_clobber_test.rs  tracker_test.rs
scripts/: check_cost_map_drift.sh  sync_compute_catalog.sh  sync_egress_catalog.sh  sync_gpu_catalog.sh  sync_service_catalog.sh
typescript/: CHANGELOG.md  PARITY.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
(+426 files in other folders)
