[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dexcost"
version = "0.4.1"
description = "Agent Unit Economics SDK — track end-to-end business-task costs for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dexwox Innovations" },
]
keywords = ["ai", "agents", "cost-tracking", "llm", "observability", "unit-economics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "wrapt>=1.16",
    "click>=8.1",
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
all = [
    "openai>=1.0",
    "anthropic>=0.18",
    "litellm>=1.0",
    "google-genai>=1.0",
    "boto3>=1.34",
    "cohere>=5.0",
]

[project.scripts]
dexcost = "dexcost.cli:main"

[project.urls]
Homepage = "https://github.com/DexwoxBusiness/dexcost-sdk"
Documentation = "https://docs.dexcost.io/docs/sdks/python"
Repository = "https://github.com/DexwoxBusiness/dexcost-sdk"
Issues = "https://github.com/DexwoxBusiness/dexcost-sdk/issues"
Changelog = "https://github.com/DexwoxBusiness/dexcost-sdk/blob/main/python/CHANGELOG.md"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/dexcost"]

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["dexcost"]

# ---------------------------------------------------------------------------
# Black (formatter)
# ---------------------------------------------------------------------------
[tool.black]
target-version = ["py310"]
line-length = 99

# ---------------------------------------------------------------------------
# Mypy (type checker — strict mode)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["wrapt", "wrapt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["yaml", "yaml.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["openai", "openai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google", "google.*", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["botocore", "botocore.*", "boto3", "boto3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cohere", "cohere.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["httpx", "httpx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["streamlit", "streamlit.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["click", "click.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["playwright", "playwright.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["aiohttp", "aiohttp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["urllib3", "urllib3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dexcost.cli"]
disallow_untyped_decorators = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]
